more implementation for service