@@ -3,6 +3,7 @@ package org.szylica.service.impl;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
+import org.szylica.collector.CarsStatsCollector;
 import org.szylica.model.car.Car;
 import org.szylica.model.car.CarComparator;
 import org.szylica.model.car.CarMapper;
@@ -15,6 +16,8 @@ import org.szylica.service.records.PriceAndSpeedStats;
 
 import java.math.BigDecimal;
 import java.util.*;
+import java.util.function.Function;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
@@ -27,8 +30,9 @@ public class CarsServiceImpl implements CarsService {
     @Override
     public List<Car> sortCarsByCriterium(Criteria criteria, boolean ascending) {
         var comparator = CarComparator.brandCarComparator;
-        switch(criteria) {
-            case BRAND -> {}
+        switch (criteria) {
+            case BRAND -> {
+            }
             case MODEL -> comparator = CarComparator.modelCarComparator;
             case SPEED -> comparator = CarComparator.speedCarComparator;
             case COLOR -> comparator = CarComparator.colorCarComparator;
@@ -47,7 +51,7 @@ public class CarsServiceImpl implements CarsService {
                         .thenComparing(CarComparator.priceCarComparator))
                 .toList());
 
-        if(!ascending) {
+        if (!ascending) {
             Collections.reverse(sortedCars);
             return sortedCars;
         }
@@ -58,7 +62,7 @@ public class CarsServiceImpl implements CarsService {
     @Override
     public Set<Car> carsWithSpeedInRange(int from, int to) {
 
-        if(from < 0 || to < 0) {
+        if (from < 0 || to < 0) {
             throw new IllegalArgumentException("Speed range must be greater than or equal to 0");
         }
 
@@ -81,12 +85,21 @@ public class CarsServiceImpl implements CarsService {
 
     @Override
     public Map<String, MostAndLeastExpensiveCars> getMostAndLeastExpensiveCarsForBrands() {
-        return Map.of();
+        return carsRepository.getAllCars()
+                .stream()
+                .collect(Collectors.groupingBy(
+                        CarMapper.carToBrand,
+                        Collectors.collectingAndThen(
+                                Collectors.toList(),
+                                this::getMaxAndLeastExpensiveCarsFromList
+                        )));
     }
 
     @Override
     public PriceAndSpeedStats getPriceAndSpeedStatistics() {
-        return null;
+        return carsRepository.getAllCars()
+                .stream()
+                .collect(new CarsStatsCollector());
     }
 
     @Override
@@ -96,16 +109,62 @@ public class CarsServiceImpl implements CarsService {
 
     @Override
     public Map<String, List<Car>> getCarsWithComponents() {
-        return Map.of();
+        var allUniqueComponents = carsRepository.getAllCars()
+                .stream()
+                .collect(Collectors.toMap(car -> car, CarMapper.carToComponents))
+                .entrySet()
+                .stream()
+                .flatMap(entry -> new HashSet<>(entry.getValue())
+                        .stream())
+                .collect(Collectors.toSet());
+
+        return allUniqueComponents
+                .stream()
+                .collect(Collectors.toMap(Function.identity(), component -> carsRepository.getAllCars().stream().filter(car -> car.hasComponent(component)).toList()))
+                .entrySet()
+                .stream()
+                .sorted(Comparator.comparing(entry -> entry.getValue().size()))
+                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue, (a, b) -> a, LinkedHashMap::new));
     }
 
     @Override
     public List<Car> getCarsWithClosestPrice(BigDecimal price) {
-        return List.of();
+        return carsRepository.getAllCars()
+                .stream()
+                .collect(Collectors.toMap(
+                        car -> CarMapper.carToPrice.apply(car).subtract(price).abs(),
+                        car -> new ArrayList<>(Arrays.asList(car)),
+                        (list1, list2) -> {
+                            list1.addAll(list2);
+                            return list1;
+                        }
+                ))
+                .entrySet()
+                .stream()
+                .min(Map.Entry.comparingByKey())
+                .map(Map.Entry::getValue)
+                .orElseGet(ArrayList::new);
     }
 
     @Override
     public List<Car> filterCars(String brand, String model, int minSpeed, int maxSpeed, BigDecimal minPrice, BigDecimal maxPrice, List<String> components) {
-        return List.of();
+        Predicate<Car> brandPredicate;
+        Predicate<Car> modelPredicate;
+        Predicate<Car> speedPredicate;
+        Predicate<Car> pricePredicate;
+        Predicate<Car> componentPredicate;
+
+        return null;
     }
+
+    private MostAndLeastExpensiveCars getMaxAndLeastExpensiveCarsFromList(List<Car> cars) {
+        Map<BigDecimal, List<Car>> groupedByPrice = cars.stream()
+                .collect(Collectors.groupingBy(CarMapper.carToPrice));
+
+        BigDecimal max = Collections.max(groupedByPrice.keySet());
+        BigDecimal min = Collections.min(groupedByPrice.keySet());
+
+        return new MostAndLeastExpensiveCars(groupedByPrice.get(max), groupedByPrice.get(min));
+    }
+
 }
